// Vitest Snapshot v1

exports[`Stepper > percent work 1`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-sm ix-stepper-with-percent\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check-filled\\" role=\\"img\\" aria-label=\\"check-filled\\"></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\">
      <div class=\\"ix-progress-circle ix-progress ix-progress-normal\\" style=\\"width: 32px; height: 32px; font-size: 10.8px;\\"><svg viewBox=\\"0 0 100 100\\">
          <!---->
          <path class=\\"ix-progress-circle-trail\\" style=\\"stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;\\" stroke=\\"#f5f5f5\\" fill-opacity=\\"0\\" stroke-linecap=\\"square\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
          <path class=\\"ix-progress-circle-path ix-progress-circle-bg\\" style=\\"transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; stroke-dasharray: 30.159289474462014px 301.59289474462014px; stroke-dashoffset: -0px;\\" fill-opacity=\\"0\\" stroke-linecap=\\"square\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
        </svg>
        <div class=\\"ix-progress-info\\">
          <!---->
        </div>
      </div><span>2</span>
    </div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;

exports[`Stepper > percent work 2`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-sm ix-stepper-with-percent\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check-filled\\" role=\\"img\\" aria-label=\\"check-filled\\"></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\">
      <div class=\\"ix-progress-circle ix-progress ix-progress-normal\\" style=\\"width: 32px; height: 32px; font-size: 10.8px;\\"><svg viewBox=\\"0 0 100 100\\">
          <!---->
          <path class=\\"ix-progress-circle-trail\\" style=\\"stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;\\" stroke=\\"#f5f5f5\\" fill-opacity=\\"0\\" stroke-linecap=\\"square\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
          <path class=\\"ix-progress-circle-path ix-progress-circle-bg\\" style=\\"transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; stroke-dasharray: 150.79644737231007px 301.59289474462014px; stroke-dashoffset: -0px;\\" fill-opacity=\\"0\\" stroke-linecap=\\"square\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
        </svg>
        <div class=\\"ix-progress-info\\">
          <!---->
        </div>
      </div><span>2</span>
    </div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;

exports[`Stepper > percent work 3`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-sm ix-stepper-with-percent\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check-filled\\" role=\\"img\\" aria-label=\\"check-filled\\"><svg viewBox=\\"0 0 1024 1024\\" focusable=\\"false\\" aria-hidden=\\"true\\" data-icon=\\"check-filled\\">
          <path d=\\"M264.384 443.52a25.6 25.6 0 0 1 36.224 0L463.552 606.4 762.24 307.712a25.6 25.6 0 0 1 36.16 0l54.336 54.272a25.6 25.6 0 0 1 0 36.224L481.6 769.28a25.6 25.6 0 0 1-36.16 0L210.112 534.016a25.6 25.6 0 0 1 0-36.224l54.272-54.336z\\"></path>
        </svg></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\">
      <div class=\\"ix-progress-circle ix-progress ix-progress-success\\" style=\\"width: 32px; height: 32px; font-size: 10.8px;\\"><svg viewBox=\\"0 0 100 100\\">
          <!---->
          <path class=\\"ix-progress-circle-trail\\" style=\\"stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px; transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s;\\" stroke=\\"#f5f5f5\\" fill-opacity=\\"0\\" stroke-linecap=\\"square\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
          <path class=\\"ix-progress-circle-path ix-progress-circle-bg\\" style=\\"transition: stroke-dashoffset .3s ease 0s, stroke-dasharray .3s ease 0s, stroke .3s, stroke-width .06s ease .3s; stroke-dasharray: 301.59289474462014px 301.59289474462014px; stroke-dashoffset: -0px;\\" fill-opacity=\\"0\\" stroke-linecap=\\"square\\" stroke-width=\\"4\\" d=\\"M 50,50 m 0,-48
       a 48,48 0 1 1 0,96
       a 48,48 0 1 1 0,-96\\"></path>
        </svg>
        <div class=\\"ix-progress-info\\">
          <!---->
        </div>
      </div><span>2</span>
    </div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;

exports[`Stepper > render work 1`] = `
"<div class=\\"ix-stepper ix-stepper-label-end ix-stepper-sm\\">
  <div class=\\"ix-stepper-item ix-stepper-item-finish\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><i class=\\"ix-icon ix-icon-check-filled\\" role=\\"img\\" aria-label=\\"check-filled\\"></i></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Finished</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-process ix-stepper-item-active\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>2</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">In Progress</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
  <div class=\\"ix-stepper-item ix-stepper-item-wait\\">
    <div class=\\"ix-stepper-item-tail\\"></div>
    <div class=\\"ix-stepper-item-icon\\"><span>3</span></div>
    <div class=\\"ix-stepper-item-content\\">
      <div class=\\"ix-stepper-item-title\\">Waiting</div>
      <div class=\\"ix-stepper-item-description\\">This is a description.</div>
    </div>
  </div>
</div>"
`;
